src/sass/layout/_footer.scss
.footer {
  background: #fff5f6;
}

.footer__slogan-one {
  font-family: Titan One;
  font-style: normal;
  font-weight: normal;

  text-transform: uppercase;
  color: #ffa5ba;
}

.footer__slogan-two {
  font-family: Titan One;
  font-style: normal;
  font-weight: normal;
  letter-spacing: 0.04em;
  text-transform: uppercase;
  color: #d41443;
}

.footer__social-list {
  display: flex;
  justify-content: space-between;
  margin-left: auto;
  width: 152px;
  height: 32px;
}

.footer__social-link {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 34px;
  height: 34px;
  border-radius: 50%;
  background: #fea5bb;
  &:focus,
  &:hover {
    transition: cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
    background: #d41443;
    cursor: pointer;
  }
}

.footer__social-git {
  width: 20px;
  height: 20px;
}
.footer__social-tele {
  width: 20px;
  height: 15px;
}
.footer__social-face {
  width: 9px;
  height: 20px;
}
.footer__phone {
  font-family: DM Sans;
  font-style: normal;
  font-weight: bold;
  font-size: 12px;
  line-height: 1.833px;
  text-align: right;
  color: #000000;
}
.phone__style {
  color: #d41443;
  &:hover,
  &:focus {
    cursor: pointer;
  }
}

.footer__copyright {
  font-family: DM Sans;
  font-style: normal;
  font-weight: bold;
  font-size: 14px;
  line-height: 1.5;
  text-align: center;
  color: #907e82;
  border-top: 1px solid #e1e1e1;
}

@media screen and (min-width: 320px) and (max-width: 767px) {
  .footer__slogan-one {
    width: 232px;
    height: 42px;
    font-size: 18px;
    line-height: 1.167;
    padding-top: 0;
    margin-top: 0;
    padding-bottom: 0;
    margin-bottom: 16px;
    margin-left: 5px;
  }
  .footer__slogan-two {
    width: 200px;
    height: 76px;
    font-size: 34px;
    line-height: 1.147;
    padding: 0;
    margin-top: 0;
    margin-bottom: 43px;
    margin-left: 5px;
  }
  .footer__social-list {
    margin-right: 5px;
  }
  .footer__phone {
    padding-bottom: 43px;
    padding-top: 46px;
    margin-right: 5px;
  }

  .footer__copyright {
    padding-top: 22px;
    padding-bottom: 25px;
  }
}

@media screen and (min-width: 768px) and (max-width: 1279px) {
  .footer__slogan-one {
    width: 340px;
    height: 57px;
    font-size: 26px;
    line-height: 1.154;
    padding-top: 0;
    margin-top: 0;
    padding-bottom: 0;
    margin-bottom: 16px;
    margin-left: 21px;
  }
  .footer__slogan-two {
    width: 340px;
    height: 110px;
    font-size: 48px;
    line-height: 1.145;
    padding: 0;
    margin-top: 0;
    margin-bottom: 61px;
    margin-left: 21px;
  }
  .footer__social-list {
    position: relative;
    bottom: 250px;
    margin-right: 21px;
  }
  .footer__phone {
    position: relative;
    bottom: 204px;
    margin-right: 21px;
  }
  .footer__copyright {
    padding-top: 29px;
    padding-bottom: 18px;
  }
}

@media screen and (min-width: 1280px) {
  .footer__slogan-one {
    width: 472px;
    height: 34px;
    font-size: 30px;
    line-height: 1.133;
    padding-top: 0;
    margin-top: 0;
    padding-bottom: 0;
    margin-bottom: 16px;
    margin-left: 99px;
  }
  .footer__slogan-two {
    width: 474px;
    height: 66px;
    font-size: 58px;
    line-height: 1.139;
    padding: 0;
    margin-top: 0;
    margin-bottom: 67px;
    margin-left: 99px;
  }
  .footer__social-list {
    position: relative;
    bottom: 181px;
    margin-right: 106px;
  }
  .footer__phone {
    position: relative;
    bottom: 128px;
    margin-right: 106px;
  }
  .footer__copyright {
    padding-top: 9px;
    padding-bottom: 10px;
  }
}

